Fix landing page's styling in dark mode (#14)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,6 +24,10 @@
   padding: 0 var(--ifm-pre-padding);
 }
 
+.hero {
+  background-color: unset;
+}
+
 #__docusaurus {
   display: flex;
   flex-direction: column;
